added instagram pics

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,5 @@ block content
     h1
       | See Wharton Travel 
     img(src= 'http://maps.googleapis.com/maps/api/staticmap?center=39.952646,-75.179513&zoom=9&size=600x400&sensor=false')
+    div(id= 'pics')
 
