--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,9 @@ html
     //javascript
     script(src='http://code.jquery.com/jquery-1.10.1.min.js')
     script(src='http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js')
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
+    script(src='/javascripts/index.js')
+    
   body
     block content
     body
