--- a/views/index.jade
+++ b/views/index.jade
@@ -3,6 +3,9 @@ extends layout
 block content
     h1
       | See Wharton Travel 
-    img(src= 'http://maps.googleapis.com/maps/api/staticmap?center=39.952646,-75.179513&zoom=9&size=600x400&sensor=false')
-    div(id= 'pics')
+    map
+    div.row
+      div.col-md-8
+        div#pics
+
 
