--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,9 +17,10 @@ html
     body
             nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
               div.navbar-header
-                a.navbar-brand(href='userlist')= title
+                a.navbar-brand(href='index'): img(src='images/Upenn.gif' height='30px')
             div.container
               div
 
+          
     
            
