--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
     body
             nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
               div.navbar-header
-                a.navbar-brand(href='index'): img(src='images/Upenn.gif' height='30px')
+                a.navbar-brand(href='index'): img(src='images/UPenn.gif' height='30px')
             div.container
               div
 
