--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
     h1
-      | Recent Wharton Travel Locations 
+      | #myWharton Instagrams
     div.row
       div.col-md-8 
         map
@@ -13,7 +13,7 @@ block content
     p.lead.small
       | <br> 
       img(src='images/instagram.png' height='20px')
-      |  Latest #myWharton tags
+      |  #myWharton 
 
     div.row
       div.col-md-8
