--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,9 +7,9 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/lightbox.css')
     //javascript
-    //script(src='http://code.jquery.com/jquery-1.10.1.min.js')
     script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(src='http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js')
+    script(src='http://maps.googleapis.com/maps/api/js?key=AIzaSyCAxDDR313tw6ixzph4LNoocppqzikeT0c&sensor=false')
     script(src='/javascripts/lightbox-2.6.min.js')
     script(src='/javascripts/index.js')
     
