--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,13 @@
+html { height: 100% }
+    body { height: 100%; margin: 0; padding: 0 }
+    #map_canvas { height: 100% }
+
+    
 body {
   padding: 50px;
   font-size: 16px;
   font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Georgia, serif;
+
 }
 
 h1 {
@@ -16,4 +22,8 @@ img {
   border: 0px;
   border-style:solid;
   border-color:#C0C0C0;
+}
+
+caption {
+text-align:center;
 }
