--- a/views/index.jade
+++ b/views/index.jade
@@ -3,13 +3,11 @@ extends layout
 block content
     h1
       | #myWharton Instagrams
+    div.row#map-canvas(style='width:100%; height: 100%')
     div.row
       div.col-md-8 
         map
       div.cold-md-4  
-        p.lead
-          | Recent Conversations:
-          ol#locations.small
     p.lead.small
       | <br> 
       img(src='images/instagram.png' height='20px')
@@ -18,5 +16,3 @@ block content
     div.row
       div.col-md-8
         div#pics
-
-
