--- a/views/index.jade
+++ b/views/index.jade
@@ -16,3 +16,12 @@ block content
     div.row
       div.col-md-8
         div#pics
+
+    div.row
+      div.col-md-6
+        | <p><br><br><br><br>
+        | Brought To You By
+        a(href= 'http://www.twitter.com/izzy_park' target='top')  @izzy_park 
+        | and 
+        a(href= 'http://www.twitter.com/WhartonJournal' target='top') @WhartonJournal
+        |. <br>Read The Journal!
