--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,6 +13,15 @@ html
     script(src='/javascripts/lightbox-2.6.min.js')
     script(src='/javascripts/index.js')
     
+    script.
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-49043807-1', 'mywharton.herokuapp.com');
+        ga('send', 'pageview');
+
   body
     block content
     body
