--- a/views/index.jade
+++ b/views/index.jade
@@ -20,8 +20,6 @@ block content
     div.row
       div.col-md-6
         | <p><br><br><br><br>
-        | Brought To You By
-        a(href= 'http://www.twitter.com/izzy_park' target='top')  @izzy_park 
-        | and 
+        | Brought To You By The 
         a(href= 'http://www.twitter.com/WhartonJournal' target='top') @WhartonJournal
-        |. <br>Read The Journal!
+        | <br>Read The Journal!
